--- a/app-config.production.yaml
+++ b/app-config.production.yaml
@@ -16,20 +16,24 @@ backend:
   # config options: https://node-postgres.com/api/client
   database:
     client: pg
+    pluginDivisionMode: schema
     connection:
-      host: ${POSTGRES_HOST}
-      port: ${POSTGRES_PORT}
-      user: ${POSTGRES_USER}
-      password: ${POSTGRES_PASSWORD}
-      # https://node-postgres.com/features/ssl
-      # you can set the sslmode configuration option via the `PGSSLMODE` environment variable
-      # see https://www.postgresql.org/docs/current/libpq-ssl.html Table 33.1. SSL Mode Descriptions (e.g. require)
-      # ssl:
-      #   ca: # if you have a CA file and want to verify it you can uncomment this section
-      #     $file: <file-path>/ca/server.crt
-
+      database: wipobackstage
+      host: dpg-ci5coldgkuvgpf8fiaj0-a.oregon-postgres.render.com
+      port: 5432
+      user: admin
+      password: 'AqtDd7ajGgrgFkQ8yHKdHBYaPwNAmDtD'
+      ssl: true
+    plugin:
+      auth:
+        connection:
+          database: wipobackstage
 catalog:
   # Overrides the default list locations from app-config.yaml as these contain example data.
   # See https://backstage.io/docs/features/software-catalog/#adding-components-to-the-catalog for more details
   # on how to get entities into the catalog.
-  locations: []
+  locations: 
+    - type: file
+      target: ../../templates/docsTemplate/template.yaml
+      rules:
+        - allow: [Template]
