--- a/app-config.yaml
+++ b/app-config.yaml
@@ -30,6 +30,14 @@ backend:
   database:
     client: better-sqlite3
     connection: ':memory:'
+    # client: pg
+    # pluginDivisionMode: schema
+    # connection:
+    #   database: backstageapp1
+    #   host: localhost
+    #   port: 5432
+    #   user: postgres
+    #   password: '12345'
   cache:
     store: memory
   # workingDirectory: /tmp # Use this to configure a working directory for the scaffolder, defaults to the OS temp-dir
