--- a/app-config.yaml
+++ b/app-config.yaml
@@ -28,16 +28,19 @@ backend:
   # This is for local development only, it is not recommended to use this in production
   # The production database configuration is stored in app-config.production.yaml
   database:
-    client: better-sqlite3
-    connection: ':memory:'
-    # client: pg
-    # pluginDivisionMode: schema
-    # connection:
-    #   database: backstageapp1
-    #   host: localhost
-    #   port: 5432
-    #   user: postgres
-    #   password: '12345'
+    client: pg
+    pluginDivisionMode: schema
+    connection:
+      database: ${POSTGRES_DATABASE}
+      host: ${POSTGRES_HOST}
+      port: 5432
+      user: ${POSTGRES_USER}
+      password: ${POSTGRES_PASSWORD}
+      ssl: true
+    plugin:
+      auth:
+        connection:
+          database: ${POSTGRES_DATABASE}
   cache:
     store: memory
   # workingDirectory: /tmp # Use this to configure a working directory for the scaffolder, defaults to the OS temp-dir
