--- a/app-config.production.yaml
+++ b/app-config.production.yaml
@@ -20,7 +20,7 @@ backend:
     connection:
       database: ${POSTGRES_DATABASE}
       host: ${POSTGRES_HOST}
-      port: 5432
+      port: ${POSTGRES_PORT}
       user: ${POSTGRES_USER}
       password: ${POSTGRES_PASSWORD}
       ssl: true
