--- a/app-config.yaml
+++ b/app-config.yaml
@@ -126,3 +126,6 @@ catalog:
     #   target: https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/acme-corp.yaml
     #   rules:
     #     - allow: [User, Group]
+csp:
+    upgrade-insecure-requests: false
+    connect-src: ["'self'", 'http:', 'https:']
