--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -48,6 +48,7 @@
     "history": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-highlight": "^0.15.0",
     "react-markdown": "^8.0.7",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
@@ -61,6 +62,7 @@
     "@testing-library/user-event": "^14.0.0",
     "@types/node": "^16.11.26",
     "@types/react-dom": "*",
+    "@types/react-syntax-highlighter": "^15.5.7",
     "cross-env": "^7.0.0",
     "cypress": "^9.7.0",
     "eslint-plugin-cypress": "^2.10.3",
